# semiautomated-swarm

./: .gitignore  CMakeLists.txt  README.md  mavproxy_params  requirments.txt
SeriaLink/: SeriaLink.pro  commlink.cpp  commlink.h  main.cpp
alpha/: README.md
alpha/pathplanning/: algorithms.py  utils.py  views.py
alpha/tests/: README.md  rrt_testa1.py  rrt_testa2.py  rrtstar_test3.py  rrtstar_testa1.py  sim_test2.py  sim_test3.py  sim_test4.py
include/: autopilot_interface.h  comm_control.h  comm_interface.h  gnc.h  mavlink_control.h  navigation.h  pid.h
python/: FrameConversions.py  MockRRT.py  SWFlightFieldWP.csv  SWOMission.csv  SWOMission2.csv  Wpdata3.csv  algorithms.py  algorithms3.py  algorithmsV2.py  algorithmsV3.py  create_service.py  create_service_script.py  flight_test.py  flight_test2.py  graph.py  graphV2.py  main.py  path_test.py  path_test2.py  path_test3.py  pathtest3.py  pgraph.py  plotting.py  radiotest3.py  radiotest4.py  rrt.py  test.py  utils.py  views.py
scripts/: apmlaunch.sh  flighttest.sh  flighttest2.sh  install_script.sh  install_script_no_ardupilot.sh  launch_mavros.sh  mav_7_1.parm  mavproxy_script1.sh  mavproxy_script2.sh  mavproxy_script3.sh  mavproxy_script4.sh  startServices.sh  startSimVechicle.sh  swarmcontrol.sh
services/: apmconnect.service  apmconnect.sh  apmlaunch.service  flighttest.service  launch_mavros.service  mavproxy.service  mavproxy1.service  mavproxy2.service  seriallink.service  services.txt.txt  swarmcontrol.service  swarmlaunch.service  swarmlaunch.sh  swarmplanning.service  swarmplanning.sh
src/: autopilot_interface.cpp  comm_control.cpp  comm_interface.cpp  gnc.cpp  guidance.cpp  main.cpp  mavlink_control.cpp  navigation.cpp  udp_port.cpp
tests/: radiotest.py  radiotest2.py  radiotest3.py  test_target_set.py  testdronekit.py
(+41 files in other folders)
